<resources>
    <string name="app_name">Barcode System</string>
    <string name="HomeScreen_name">Home Screen</string>
    <string name="desc">PASMY Android Barcode System</string>
    <string name="Tcode_desc">Button for Tcode</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="update_app_url">http://172.16.206.19/REST_API/debug/app-debug.apk</string>
    <string name="notification_description">Downloading...</string>
    <string name="barcodeTranslator">http://172.16.206.19/REST_API/SMT_EKANBAN_SERVICES/BreakBarcodeToArray?barcode=%s</string>
    <string name="save">Save</string>
    <string name="clear">Clear</string>
    <string name="Warning">Warning !</string>
    <string name="menu">Menu</string>
    <string name="ToLoc">To Location</string>
    <string name="location_label">Location :</string>
    <string name="location_Hint">Location</string>
    <string name="ReelQty_label">Reel Qty :</string>
    <string name="ReelNum">Reel :</string>
    <string name="LocationWarning">Scan Location tak sama dengan pull list location !</string>
    <string name="locationRackInfo">http://172.16.206.19/REST_API/SMT_EKANBAN_SERVICES/MPPgetLocationInfo?rack=%1s&amp;mat=%2s</string>
    <string name="ToStorageLoc">To Storage Location</string>
    <string name="fromStorageLoc">From Storage Location</string>
    <string name="ICTransferTitle">IC Transfer to EMS</string>
    <string name="BarcodeInputHint">Barcode</string>
    <string name="ToStorageLocationInputHint">To Storage Location</string>
    <string name="matterialTextview_description"> Material : </string>
    <string name="P03_title"> P03 : GR for PCB Assy </string>
    <string name="P038title"> P08 : Clear PCB Bin </string>
    <string name="P03_barcode"> Picklist Barcode</string>
    <string name="material_label"> Part: </string>
    <string name="quantity_label"> Quantity: </string>
    <string name="quantityHint"> Quantity </string>
    <string name="uom_label"> UOM: </string>
    <string name="P04"> P04 </string>
    <string name="Transfer">Transfer</string>
    <string name="Clear">Clear</string>
    <string name="p04Title">P04: PCB Assy to FA</string>
    <string name="productionOrderLabel">Production Order : </string>
    <string name="BatchLabel">Batch : </string>
    <string name="BatchHint">Batch</string>
    <string name="Empty"></string>
    <string name="StorageBinDesc">"Storage Bin : "</string>
    <string name="StorageBinDescHint">"Storage Bin"</string>
    <string name="ErrorMessage1">"From storage loc is empty"</string>
    <string name="ErrorMessage2">"Bin is empty"</string>
    <string name="ErrorTitle">"Error in parsing!"</string>
    <string name="Scrolview">"ScrollView"</string>
    <string name="Success">"Success"</string>
    <string name="fromStorageBin">From Storage Bin</string>
    <string name="toStorageBin">To Storage Bin</string>
    <string name="t32Title">T32 : Transfer from Super market to Production</string>
    <string name="StoreKanban">Store Kanban</string>
    <string name="ProdKanban">Production Kanban</string>
    <string name="total_scanned_material">Total Scanned Material :%1$s</string>
    <string name="t06_after_iqa_to_smt_store">T06:Receiving to SMT Store</string>
    <string name="from_location">From Location</string>
    <string name="no_barcode_scanned">NO BARCODE SCANNED</string>
    <string name="tvMaterialTxt">Material : %1$s</string>
    <string name="tvBatchTxt">Batch : %1$s</string>
    <string name="tvReelNumTxt">Reel Number : %1$s</string>
    <string name="tvQuantityTxt">Quantity : %1$s</string>
    <string name="t05_IQA_to_smt_store">T05:After IQA to SMT Store</string>
    <string name="http_172_16_206_19_rest_api_smt_ekanban_services_breakbarcodetoarray_barcode">http://172.16.206.19/REST_API/SMT_EKANBAN_SERVICES/BreakBarcodeToArray?barcode=%1$s</string>
    <string name="item_barcode">Item Barcode</string>
    <string name="part">Part</string>
    <string name="uom">Uom</string>
    <string name="part_on_kanban">Part on Kanban</string>
    <string name="p01_gr_for_smt_prod">P01:GR for SMT Prod</string>
    <string name="po_barcode">PO Barcode</string>
    <string name="UOM_PC">PC</string>
    <string name="p02_smt_to_pcb_mecha">P02:SMT to PCB\\MECHA</string>
    <string name="lot_no">Lot No</string>
    <string name="employee_id">Employee ID</string>
    <string name="quantity">Quantity</string>
    <string name="rm_workara">RM-WORKARA</string>
    <string name="item_location_barcode">Item/Location Barcode</string>
    <string name="wh_kb_part">WH KB Part</string>
    <string name="part_on_slider">Part On Slider</string>
    <string name="from_storage_type">From Storage Type</string>
    <string name="to_storage_type">To Storage Type</string>
    <string name="inv_doc">Inv Doc</string>
    <string name="unique_id">Unique Id</string>
    <string name="item">Item</string>
    <string name="stockstatus">StockStatus</string>
    <string name="quantity_scanned">Quantity Scanned : </string>
    <string name="material_scanned">Material Scanned : </string>

    <string name="quantity_scanned_para">Quantity Scanned : %1s</string>
    <string name="material_scanned_para">Material Scanned : %1s</string>
    <string name="reservation_no">Reservation No</string>
    <string name="generate">Generate</string>
    <string name="t50_scan_from_rack_to_bin">T50 : Scan from Rack to Bin</string>
    <string name="std_bin_type">Std Bin Type</string>
    <string name="kanban_quantity">Kanban Quantity</string>
    <string name="title">title</string>
    <string name="trolley">Trolley</string>
    <string name="trolley_number">Trolley Number</string>
    <string name="total_items_to_transfer">Total Items to Transfer : 0</string>
    <string name="STtotal_items_to_transfer">Total items to transfer : %1$s</string>
    <string name="v_002">002</string>
    <string name="A0_str">A0</string>
    <string name="H0_str">H0</string>
    <string name="register_new_bin_partition">Register New Bin &amp; Partition</string>
    <string name="new_issue_bin_or_partition">New Issue Bin or Partition</string>
    <string name="current_date">Current Date : %1$s</string>
    <string name="bin_partition_scrap">Bin &amp; Partition Scrap</string>
    <string name="bin_partition_issue">Bin &amp; Partition Issue</string>
    <string name="po_gr_area">PO-GR-Area</string>
    <string name="before_iqa">BEFORE-IQA</string>
    <string name="after_iqa">AFTER-IQA</string>
    <string name="prefered_location">Prefered Location :</string>
    <string name="carton_number_lbl">Carton Number :</string>
    <string name="do_number">DO Number</string>

    <string-array name="Stock_Status">
        <item>Warehouse</item>
        <item>Quality Inspection</item>
        <item>Wrhse/QuInsp.(InvSa)</item>
        <item>Blocked</item>
    </string-array>
    <string-array name="Dimension">
        <item>CCM</item>
        <item>&quot;3</item>
        <item>CD3</item>
        <item>CL</item>
        <item>FOZ</item>
        <item>FT3</item>
        <item>GAL</item>
        <item>HL</item>
        <item>L</item>
        <item>M3</item>
        <item>ML</item>
        <item>MM3</item>
        <item>PT</item>
        <item>QT</item>
        <item>YD3</item>
        <item>&#181;L</item>
    </string-array>
</resources>