<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".T21">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/T21TVTITLE"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="@string/Empty"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/T21EDBARCODE"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/cell_with_border"
                    android:ems="10"
                    android:hint="@string/BarcodeInputHint"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/T21TVMATERIAL"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="10dp"
                    android:padding="10dp"
                    android:text="@string/matterialTextview_description"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/T21TVBATCH"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:padding="10dp"
                    android:text="@string/BatchLabel"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/T21EDQUANTITY"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/cell_with_border"
                    android:ems="10"
                    android:hint="@string/quantityHint"
                    android:inputType="text"
                    android:padding="10dp" />

                <TextView
                    android:id="@+id/T21TVREEL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:padding="10dp"
                    android:text="@string/ReelNum"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/T21EDLOCATIONFROM"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/cell_with_border"
                    android:ems="10"
                    android:hint="@string/from_location"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/T21EDLOCATIONTO"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/cell_with_border"
                    android:ems="10"
                    android:hint="@string/ToLoc"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/T21BTNTransfer"
                    android:layout_width="150dp"
                    android:layout_height="60dp"
                    android:layout_margin="10dp"
                    android:text="@string/Transfer" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>